tests/invalid/runtime/index_get_string_oob.pts
function main() : void {
    string s = "ab";
    glyph g = s[2];
    Sys.print("never");
}
